Batch commits.